hphp/test/zend/good/ext/libxml/tests/003.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (!extension_loaded('simplexml')) die('skip');
}
