hphp/test/zend/bad/ext/phar/tests/fopen_edgecases2.php.skipif
<?php if (!extension_loaded("phar")) die("skip"); ?>
<?php if (version_compare(phpversion(), '6.0', '>=')) die('skip parameter parsing changed in 6.0'); ?>